# pdsw_artifacts

./: .gitignore  README.md
experiments/: init_script.sh  job_microbenchmarks.qsub  microbenchmark.py  transfer_methods.py
experiments/cpp-store/: CMakeLists.txt  DummyBackend.cpp  DummyBackend.hpp  Makefile.meghana  debug.hpp  graph_test.cpp  model_client.cpp  model_client.hpp  model_client.py  model_server.cpp  model_server.hpp  model_utils.hpp  server.cpp
plot_scripts/: all_timings_fig3.py  rdma_break_down_fig5.py  rocksdb_break_down_fig4.py  scaling_plots_fig6.py
